tests/baselines/reference/undeclaredBase.errors.txt
==== tests/cases/compiler/undeclaredBase.ts (1 errors) ====
    module M { export class C extends M.I { } }
                                        ~
!!! undeclaredBase.ts(1,37): error TS2094: The property 'I' does not exist on value of type 'M'.
    
    